Fix : 네비게이션 css에 z-index 추가

--- a/front/css/menu.css
+++ b/front/css/menu.css
@@ -5,7 +5,7 @@
   background-color: #ffffff;
   padding: 0;
   position: relative;
-
+  z-index: 10;
 }
 .menu .bg-line{
   position: absolute;
